# rezzy

./: .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .typos.toml  Cargo.toml  Makefile  README.md  paper.tex  pathology_traversal_bfs.jsonl  rustfmt.toml  scratch.rs
.github/workflows/: docs.yml  e2e.yml  lean.yml  rust.yml
RumaLean/: Conjectures.lean  CustomAIR.lean  MergeBase.lean  StateRes.lean
benches/: bench_cmp_iter_lattice.rs
docs/: 4242-state-dags.md  4430-member-keys.md  PERFORMANCE.md  architecture.md  auth_rules_audit.md  ban_evasion.jsonl  cve-submission.json  demotion_evasion.jsonl  invite_lock.jsonl  spec_coverage.csv
paper/: paper.tex
res/expected/: oracle_52k_room.json  oracle_nheko_room.json  oracle_v2_1_room.json
scripts/: compare_homeservers.py  dagcmp.py  e2e_shuffled.py  e2e_test.py  export_from_db.py  export_room_dag.py  extract_oracle_state.py  fetch_matrix_state.py  gen_large_room.py  gen_snapshots.py  generate_badge.py  synthesize_missing.py
src/: auth.rs  cdo.rs  event_types.rs  lattice.rs  lib.rs  main.rs  merge.rs  mock_ruma.rs  resolve.rs  roaring_auth.rs  sorting.rs  state_at.rs  state_delta.rs  subgraph.rs  test_auth.rs  test_lib.rs  test_main.rs  types.rs  z3_anomaly_solver.py
src/auth/: mod.rs  roaring.rs  user.rs
src/basespec/: event_types.rs  mod.rs  rezzy_types.rs  version_props.rs
src/resolve/: cdo.rs  iterative.rs  lattice.rs  mod.rs  sorting.rs  subgraph.rs
src/state/: at.rs  delta.rs  mod.rs
tests/: cli_test.rs  critique.rs  hashing.rs  it  large_rooms.rs  pathologies.rs  regen_oracles.rs  resolve  resolve.rs  ruma_upstream.rs  sanity.rs  snapshots.rs  test_auth.rs  test_integer_keys.rs  test_lib.rs  test_main.rs  test_restricted_joins.rs  test_utils.rs  traversal.rs  unredacted_lounge.rs  upstream_runner.rs
tests/critique_data/: 01_state_reset.json  01_state_reset.jsonl  02_admin_lockout.json  02_admin_lockout.jsonl  03_phantom_join_rules.json  03_phantom_join_rules.jsonl  04_ban_evasion.json  04_ban_evasion.jsonl  05_timestamp_spoofing.json  05_timestamp_spoofing.jsonl  06_action_evaporation.json  06_action_evaporation.jsonl  06b_mod_membership_evaporation.json  06b_mod_membership_evaporation.jsonl  06c_zombie_invite_reset.json  06c_zombie_invite_reset.jsonl  07_state_baseline_pollution.json  07_state_baseline_pollution.jsonl  08_problem_b.json  08_problem_b.jsonl  09_moderator_disappearance.json  09_moderator_disappearance.jsonl  10_vanishing_timelines.json  10_vanishing_timelines.jsonl  11_auth_chain_truncation.json  11_auth_chain_truncation.jsonl  12_zombie_resurrection.json  12_zombie_resurrection.jsonl  13_large_cascading_lockout.json  13_large_cascading_lockout.jsonl  14_state_reset_via_redactions.json  14_state_reset_via_redactions.jsonl  15_dos_traversal_bfs.json  15_dos_traversal_bfs.jsonl  16_causality_leakage.json  16_causality_leakage.jsonl  17_sliced_dag_membership_desync.jsonl  18_unauthorized_admin_amplification.jsonl
tests/mock_ruma/: mod.rs
tests/resolve/: macros.rs
tests/resolve/fixtures/MSC4297-problem-A/: 2-components.json
tests/resolve/snapshots/: ban_vs_power_levels@resolved_state.snap
tests/utils/: mod.rs
