[package]
name = "ruma-lean"
version = "0.1.4"
edition = "2021"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "Formally verified, dependency-free Matrix State Resolution v2 logic."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/ruma-lean"
autotests = false
default-run = "ruma-lean"
exclude = [
    "res/",
    "scripts/",
    "docs/",
    "RumaLean/",
    "RumaLean.lean",
    "lake*",
    "lean-toolchain",
    ".envrc",
    ".env.example",
    ".github",
    ".gitignore",
    ".editorconfig",
    ".pre-commit-config.yaml",
    ".prettierignore",
    ".prettierrc",
    ".rgignore",
    "tests/",
    "Makefile",
]

[[bin]]
name = "ruma-lean"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "regen-oracles"
path = "src/bin/regen_oracles.rs"
required-features = ["regen"]

[features]
default = ["std"]
std = ["alloc", "serde_json/std", "serde/std"]
alloc = []
zkvm = []
cli = ["std", "dep:clap", "dep:anyhow", "dep:ureq"]
mock-ruma = ["dep:ruma-state-res", "dep:ruma-common", "dep:ruma-events"]
regen = ["std"]
hashing = ["dep:sha2", "dep:base64"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4.4", optional = true, features = ["derive", "env"] }

hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ureq = { version = "2.9", optional = true, features = ["json"] }

base64 = { version = "0.22.1", optional = true }
ruma-common = { git = "https://github.com/ruma/ruma", optional = true }
ruma-events = { git = "https://github.com/ruma/ruma", optional = true }
ruma-state-res = { git = "https://github.com/ruma/ruma", features = ["__criterion"], optional = true }
sha2 = { version = "0.11.0", optional = true }

[dev-dependencies]
insta = "1.47.2"
ruma-common = { git = "https://github.com/ruma/ruma" }
similar = "3.1.0"
test-log = "0.2.20"
tracing-subscriber = "0.3.23"
[[test]]
name = "snapshots"
path = "tests/snapshots.rs"
[[test]]
name = "sanity"
path = "tests/sanity.rs"

[[test]]
name = "large_rooms"
path = "tests/large_rooms.rs"

[[test]]
name = "upstream_runner"
path = "tests/upstream_runner.rs"
required-features = ["mock-ruma"]
