[package]
name = "ruma-lean"
version = "0.1.5-rc.0"
edition = "2021"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "Lightweight and formally verified: State Res v1, v2, and v2.1 reference implementations in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/ruma-lean"
autotests = false
default-run = "ruma-lean"
exclude = [
    "res/",
    "scripts/",
    "docs/",
    "RumaLean/",
    "RumaLean.lean",
    "lake*",
    "lean-toolchain",
    ".envrc",
    ".env.example",
    ".github",
    ".gitignore",
    ".editorconfig",
    ".pre-commit-config.yaml",
    ".prettierignore",
    ".prettierrc",
    ".rgignore",
    ".gitmodules",
    ".typos.toml",
    "rustfmt.toml",
    "tests/",
    "Makefile",
]

[[bin]]
name = "ruma-lean"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["std"]
std = ["alloc", "serde_json/std", "serde/std"]
alloc = []
zkvm = []
cli = ["std", "dep:clap", "dep:anyhow", "dep:ureq"]
mock-ruma = ["dep:ruma-state-res", "dep:ruma-common", "dep:ruma-events"]
regen = ["std"]
hashing = ["dep:sha2", "dep:base64"]

[dependencies]
anyhow = { version = "1.0", optional = true }

base64 = { version = "0.22.1", optional = true }
clap = { version = "4.4", optional = true, features = ["derive", "env"] }

hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more"] }
roaring = "0.11.4"
ruma-common = { version = "0.19.0", optional = true }
ruma-events = { version = "0.34.0", optional = true }
ruma-state-res = { version = "0.17.0", features = ["__criterion"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.11.0", optional = true }
ureq = { version = "2.9", optional = true, features = ["json"] }

[dev-dependencies]
insta = "1.47.2"
ruma-common = "0.19.0"
similar = "3.1.0"
test-log = "0.2.20"
tracing-subscriber = "0.3.23"
[[test]]
name = "snapshots"
path = "tests/snapshots.rs"
[[test]]
name = "sanity"
path = "tests/sanity.rs"

[[test]]
name = "hashing"
path = "tests/hashing.rs"

[[test]]
name = "traversal"
path = "tests/traversal.rs"

[[test]]
name = "large_rooms"
path = "tests/large_rooms.rs"

[[test]]
name = "upstream_runner"
path = "tests/upstream_runner.rs"
required-features = ["mock-ruma"]

[[test]]
name = "pathologies"
path = "tests/pathologies.rs"

[[test]]
name = "critique"
path = "tests/critique.rs"

[[test]]
name = "regen_oracles"
path = "tests/regen_oracles.rs"
harness = false
required-features = ["regen"]
