[package]
name = "rezzy"
version = "0.4.0"
edition = "2021"
autobins = false
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "Lightweight and formally verified: State Res v1, v2, and v2.1 reference implementations in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/rezzy"
autotests = false
default-run = "rezzy"
exclude = [
    "res/",
    "scripts/",
    "docs/",
    "RumaLean/",
    "RumaLean.lean",
    "lake*",
    "lean-toolchain",
    ".codecov.yml",
    ".envrc",
    ".env.example",
    ".github",
    ".gitignore",
    ".editorconfig",
    ".pre-commit-config.yaml",
    ".prettierignore",
    ".prettierrc",
    ".rgignore",
    ".ignore",
    ".gitmodules",
    ".typos.toml",
    "rustfmt.toml",
    "tests/",
    "Makefile",
]

[[bin]]
name = "rezzy"
path = "src/bin/rezzy/main.rs"
required-features = ["cli"]

[[bin]]
name = "regen_oracles"
path = "tests/regen_oracles.rs"
required-features = ["regen"]

[features]
default = ["std"]
std = ["alloc", "serde_json/std", "serde/std"]
alloc = []
cli = ["std", "dep:clap", "dep:anyhow", "dep:ureq", "mimalloc"]
regen = ["std"]
hashing = ["dep:sha2", "dep:base64"]
mock-ruma = []
mimalloc = ["dep:mimalloc"]

[dependencies]
anyhow = { version = "1.0", optional = true }

base64 = { version = "0.22.1", optional = true }
clap = { version = "4.4", optional = true, features = ["derive", "env"] }

hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more"] }
imbl = { version = "4", default-features = false, features = ["serde"] }
mimalloc = { version = "0.1.52", optional = true }
roaring = "0.11.4"

serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.11.0", optional = true }
ureq = { version = "2.9", optional = true, features = ["json"] }

[dev-dependencies]
bincode = "1"
insta = "1.47.2"
mimalloc = "0.1.52"
ruma-common = "0.19.0"
ruma-events = "0.34.0"
ruma-state-res = { version = "0.17.0", features = ["__criterion"] }
similar = "3.1.0"
test-log = "0.2.20"
tracing-subscriber = "0.3.23"
[[test]]
name = "snapshots"
path = "tests/snapshots.rs"
[[test]]
name = "sanity"
path = "tests/sanity.rs"

[[test]]
name = "hashing"
path = "tests/hashing.rs"

[[test]]
name = "traversal"
path = "tests/traversal.rs"

[[test]]
name = "large_rooms"
path = "tests/large_rooms.rs"

[[test]]
name = "upstream_runner"
path = "tests/upstream_runner.rs"
required-features = ["mock-ruma"]

[[test]]
name = "pathologies"
path = "tests/pathologies.rs"

[[test]]
name = "critique"
path = "tests/critique.rs"

[[test]]
name = "test_auth"
path = "tests/test_auth.rs"

[[test]]
name = "test_lib"
path = "tests/test_lib.rs"

[[test]]
name = "test_main"
path = "tests/test_main.rs"
required-features = ["cli"]

[[test]]
name = "unredacted_lounge"
path = "tests/unredacted_lounge.rs"

[[test]]
name = "test_integer_keys"
path = "tests/test_integer_keys.rs"

[[test]]
name = "test_restricted_joins"
path = "tests/test_restricted_joins.rs"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)"] }

[lints.clippy]
pedantic = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
correctness = "warn"
suspicious = "warn"

# High-Value Security & Robustness restrictions
arithmetic_side_effects = "warn"
undocumented_unsafe_blocks = "warn"
dbg_macro = "warn"
get_unwrap = "warn"

[profile.release-max-perf]
inherits = "release"
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release]
strip = "symbols"
lto = "thin"
